Colin gets blame 😈

--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,11 @@
       "email": "andy@thefragens.com",
       "homepage": "https://thefragens.com",
       "role": "Developer"
+    },
+    {
+      "name": "Colin Stewart",
+      "homepage": "https://github.com/costdev",
+      "role": "Developer"
     }
   ],
   "support": {
